RESOLVED FIXED119062
[GTK] Media Player's volume slider behavior is not consistent
https://bugs.webkit.org/show_bug.cgi?id=119062
Summary [GTK] Media Player's volume slider behavior is not consistent
Danilo de Paula
Reported 2013-07-24 12:57:18 PDT
I'm not sure if it's expected or not the volume slider visibility behavior is a little bit odd. When the video is playing and you pass the mouse over the sound icon inside the control box the volume slider shows up. However it never hides itself again, even if the media button is pressed or the control box is hidden. My suggestion would be to close the slider when the button is clicked or when the control box is hidden.
Attachments
Patch (2.15 KB, patch)
2013-08-12 09:07 PDT, Danilo de Paula
no flags
Danilo de Paula
Comment 1 2013-08-12 09:07:51 PDT
Gustavo Noronha (kov)
Comment 2 2013-08-12 09:15:20 PDT
Comment on attachment 208545 [details] Patch OK, makeTransparent sucks as a name for this IMO, but I guess it's what we're stuck with.
WebKit Commit Bot
Comment 3 2013-08-13 06:13:28 PDT
Comment on attachment 208545 [details] Patch Clearing flags on attachment: 208545 Committed r154000: <http://trac.webkit.org/changeset/154000>
WebKit Commit Bot
Comment 4 2013-08-13 06:13:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.