[GTK] close the volume slider when the media control panel is hidden https://bugs.webkit.org/show_bug.cgi?id=119062

Patch by Danilo Cesar Lemes de Paula <danilo.cesar@collabora.co.uk> on 2013-08-13
Reviewed by Gustavo Noronha Silva.

It's not obvious how to close the volume slider on webkitGtk.
The volume slider should close if the control panel is hidden.

* html/shadow/MediaControlsGtk.cpp:
(WebCore::MediaControlsGtk::makeTransparent):
* html/shadow/MediaControlsGtk.h:

Canonical link: https://commits.webkit.org/137689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154000 268f45cc-cd09-0410-ab3c-d52691b4dbfc